# marcedit-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.pull.yml  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
.tickets/: TASK-001-bootstrap.md  TASK-002-lift-modules.md  TASK-003-session-identity.md  TASK-004-rules-and-validate.md  TASK-005-view-page.md  TASK-006-report-page.md  TASK-007-help-tooltips.md  TASK-008-diff-page.md  TASK-009-tasks-page.md  TASK-010-marc-editor.md  TASK-011-record-store.md  TASK-012-task-persistence.md  TASK-013-workspace.md  TASK-014-advanced-search.md  TASK-015-dedupe.md  TASK-016-perf-polish.md  TASK-017-sandbox-form-builder.md  TASK-018-codegen-safety.md  TASK-019-quotas-audit.md  TASK-020-stream-tasks-dedupe.md  TASK-021-prod-auth-hardening.md  TASK-022-dry-cleanup.md  TASK-023-tasks-ux-progress-diff.md  TASK-024-view-inline-edit.md  TASK-025-workspace-edit-100k.md  TASK-026-view-human-readable.md  TASK-027-diff-stream-from-disk.md  TASK-028-dedupe-scale.md  TASK-029-security-review-fixes.md  TASK-030-task-builder-ops.md  TASK-031-008-fixed-field-helper.md  TASK-032-marc-tools.md  TASK-033-reports-expansion.md  TASK-034-task-run-history.md  TASK-035-post-v31-review-fixes.md  TASK-036-batch-find-replace-preview.md  TASK-042-find-page.md  TASK-043-dedupe-at-scale.md  TASK-044-dedupe-regex-error-visibility.md  TASK-045-sidebar-sections.md  (+133 more)
data/: marc-rules.txt
deploy/: libtools2-marcedit.conf.snippet  marcedit-web-attestation.conf.example  marcedit-web-private.service  marcedit-web-public.service  marcedit-web-watchdog.service  marcedit-web-watchdog.timer  marcedit-web-worker.service  marcedit-web.service  marcedit.sudoers
docs/: adr-collaboration-locking.md  deployment.md  its-setup.md  jobs.md
marcedit_web/: App.py  Home.py
scripts/: benchmark-large-batch.py  deploy.sh  install.sh  preflight-check.sh
tests/: conftest.py  test_access_gate.py  test_admin_page_import.py  test_ai_task_draft.py  test_app_pages.py  test_audit.py  test_auth_header.py  test_authz.py  test_authz_admin.py  test_batch_replace.py  test_batch_runtime.py  test_codegen_safety.py  (+98 more)
(+142 files in other folders)
