[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marcedit-web"
version = "0.1.0"
description = "Web-based MARC21 editor recreating MarcEdit's core features."
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = { text = "MIT" }
authors = [{ name = "Smith College Libraries" }]
dependencies = [
    "streamlit>=1.37,<2",
    "pymarc>=5.1.2,<6",
    "streamlit-ace>=0.1.1,<0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
]

[tool.setuptools.packages.find]
include = ["marcedit_web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# /app is root-owned and read-only at runtime (TASK-029 fs hardening).
# Pytest's default ``.pytest_cache`` location under the project root
# isn't writable for the marcedit user. /tmp is.
cache_dir = "/tmp/pytest_cache"
